@@ -1,3 +1,9 @@
+2006-08-01  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-ssl-gnutls.c: (_lm_ssl_read):
+	- EOF on 0 bytes read.
+	- Fixes LM-45.
+
 2006-06-27  Mikael Hallendal  <micke@imendio.com>
 
 	* Release 1.1.2
